0.9.5 -> 0.9.6 (r3075-r3107-r3xxx)

General/Core:
 bug: emulate keypad interrupt
 bug: fix dma address reloading
 bug: fix rom close memory corruption
 bug: fix div and sqrt busy flag bug
 bug: fix vectest

Graphics:
 bug: fix a mistakenly rendered OBJ window
 
Windows:
 bug: fix 16bpp display
 bug: more fixes to multi-gamepads
 enh: add EPX and EPX1.5X resize filters
 enh: add a japanese translation which will soon be stale like the others
 
0.9.4 -> 0.9.5 (r2437-r3075)

0.9.5 introduces an entirely rewritten main emulation loop
This totally changes the timing, and totally breaks old savestates.
The OSX build is now based on the GTK port which is more up-to-date.

Assorted Highlights:
  * synchronous SPU mode to fix	streaming sounds
  * win32: lua engine, path configuration, 7z dearchiving support
  
General/Core:
 bug: rewrite main emulation loop and cycle accounting, fixes a lot of timings
 bug: add more detailed timing emulation, removes much bogus lag
 bug: rewrite DMA,gxfifo,gxstat; fix many games and no more alternate flush mode
 bug: fix cflash directory support for non-windows and sector-writing
 bug: fix freeze in cart irq
 bug: correctly emulate dma to/from tcm
 bug: fix in thumb LSR carryflag
 bug: fix thumb BX PC switch to arm state
 bug: fix adpcm looping, remove adpcm caching (no longer necessary)
 bug: fixes to swi 3,4,5,8,0x10
 bug: fixes to exmemstat and ipc sync registers
 bug: support new backup commands
 bug: improve bootup bios/firmware emulation steps
 enh: gbaslot: add guitar grip, gbagame flash support, expansion memory pak
 enh: add more powerful antigrain-based drawing library and rewrite OSD system
 enh: ideas-style debugging prints
 enh: most optimizations now SSE instead of SSE2
 enh: more improvements to frameskipping and frame advance/speed controls

Graphics:
 bug: fix backdrop blending with garbage
 bug: fix 256B granularity sprite addressing for sub gpu
 bug: fix obj blending, bmp obj rendering, and some obj window cases